# edify

./: .envrc  .gitignore  CHANGES.md  GNUmakefile  LICENSE.md  README.md  Setup.hs  default.nix  edify.cabal  edify.nix  flake.nix  hie.yaml  shell.nix
.github/workflows/: release.yml  tests.yml
app/: Main.hs  Outline.hs
app/Edify/Command/: Allow.hs  Audit.hs  Build.hs  Chunk.hs  Generate.hs  Narrow.hs  Source.hs
data/config/: project.yml
data/templates/: slides.tex
doc/: exec.md  image.md  import.md  insert.md  todo.org
entities/: Main.hs  entities.cabal  entities.sh
nix/: builder.nix  deps.nix  nixpkgs.nix  overlay.nix  sources.json
scripts/: devrun.sh
src/Edify/: Format.hs  Input.hs  JSON.hs  Project.hs  Sourced.hs
src/Edify/Compiler/: Allow.hs  Asset.hs  Audit.hs  Build.hs  Cycle.hs  Error.hs  Eval.hs  FilePath.hs  Fingerprint.hs  Lang.hs  Markdown.hs  Options.hs  Project.hs  Shake.hs  Stack.hs  User.hs
src/Edify/Format/: Markdown.hs
src/Edify/HTML/: Entities.hs
src/Edify/Markdown/: AST.hs  Attributes.hs  Comment.hs  Common.hs  Entities.hs  Fence.hs  Heading.hs  Image.hs  Include.hs  Link.hs  Narrow.hs
src/Edify/Project/: Compiler.hs  Config.hs  Error.hs  Inputs.hs  Options.hs  Source.hs  Target.hs
src/Edify/System/: Exit.hs  FilePath.hs  Input.hs
src/Edify/Text/: Attributes.hs  Fence.hs  File.hs  Fingerprint.hs  Format.hs  Inclusion.hs  Indent.hs  JSON.hs  Narrow.hs  Placeholders.hs  Pretty.hs
src/lib/Text/Edify/: Filter.hs
src/lib/Text/Edify/File/: Manifest.hs  Stitch.hs  Time.hs
src/lib/Text/Edify/Filter/: Div.hs  Exec.hs  FilterT.hs  Image.hs  Insert.hs  Options.hs
src/lib/Text/Edify/Rewrite/: Outline.hs
src/lib/Text/Edify/Time/: TimeCode.hs  TimeTree.hs
src/lib/Text/Edify/Util/: Error.hs  HeaderTree.hs  Inclusion.hs  Indent.hs  Markdown.hs  Narrow.hs  Parse.hs
test/: AttributesTest.hs  CompilerTest.hs  FenceTest.hs  InclusionTest.hs  Main.hs  ManifestTest.hs  MarkdownTest.hs  NarrowTest.hs  TimeCodeTest.hs  TimeFileTest.hs  manifest.txt  timecodes.txt
test/Edify/: ProjectTest.hs
test/Edify/Compiler/: CycleTest.hs
test/Edify/Markdown/: ASTTest.hs  AttributesTest.hs  CommonTest.hs  FenceTest.hs  HeadingTest.hs  ImageTest.hs  IncludeTest.hs  LinkTest.hs
test/data/: b.md  e.md  reduce-in.md  reduce-out.md
test/data/ast/: a.md
test/data/fence/: a.md  b.md  c.md  d.md  e.md  rewrite-a0.md  rewrite-a1.md  rewrite-b0.md  rewrite-b1.md
test/data/inclusion/: a.md  b.md  c.md  d.md  f.md
test/data/narrow/: closure.js  closure.js.golden  reduce.js  reduce.js.golden
test/scripts/: edify.sh  pandoc.sh
