cabal-version:      2.2
name:               edify
version:            0.5.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Peter Jones <pjones@devalot.com>
maintainer:         Peter Jones <pjones@devalot.com>
copyright:          Copyright (c) 2013-2021 Peter Jones
category:           Text
build-type:         Simple
tested-with:        GHC ==8.6.5 || ==8.8.4 || ==8.10.2
homepage:           https://github.com/pjones/edify
bug-reports:        https://github.com/pjones/edify/issues
synopsis:
  Markdown (via pandoc) processing and content tools for Devalot.com

description:        TODO

------------------------------------------------------------------------------
extra-source-files:
  README.md
  test/*.txt

------------------------------------------------------------------------------
flag maintainer
  description: Enable settings for the package maintainer.
  manual:      True
  default:     False

--------------------------------------------------------------------------------
common options
  default-language: Haskell2010
  ghc-options:
    -Wall -Wno-name-shadowing -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns -Werror=missing-home-modules
    -Widentities -Wmissing-export-lists -Wredundant-constraints

  if flag(maintainer)
    ghc-options: -Werror

--------------------------------------------------------------------------------
common extensions
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    UndecidableInstances
    ViewPatterns

--------------------------------------------------------------------------------
common dependencies
  build-depends:
    , aeson                 ^>=1.4
    , attoparsec            ^>=0.13
    , base                  >=4.12 && <5.0
    , base16-bytestring     ^>=0.1
    , binary                ^>=0.8
    , binary-instances      ^>=1.0
    , byline                >=1.0  && <1.2
    , cryptohash-sha256     ^>=0.11
    , directory             ^>=1.3
    , fgl                   ^>=5.7
    , filepath              ^>=1.4
    , free                  ^>=5.1
    , generic-lens          ^>=2.0
    , HsYAML                ^>=0.2
    , HsYAML-aeson          ^>=0.2
    , lens                  >=4.18 && <5.0
    , mtl                   ^>=2.2
    , optparse-applicative  ^>=0.16
    , pandoc                ^>=2.10
    , pandoc-types          ^>=1.21
    , process               ^>=1.6
    , recursion-schemes     ^>=5.1
    , relude                >=0.6  && <0.8
    , shake                 ^>=0.19
    , text                  ^>=1.2
    , unordered-containers  ^>=0.2
    , vector                ^>=0.12

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude)

------------------------------------------------------------------------------
library
  import:          options, extensions, dependencies
  hs-source-dirs:  src
  exposed-modules:
    Edify.Compiler.Cycle
    Edify.Compiler.Error
    Edify.Compiler.Eval
    Edify.Compiler.FilePath
    Edify.Compiler.Fingerprint
    Edify.Compiler.Lang
    Edify.Compiler.Markdown
    Edify.Compiler.Options
    Edify.Compiler.Project
    Edify.Compiler.Shake
    Edify.Compiler.Stack
    Edify.Format
    Edify.Format.Markdown
    Edify.HTML.Entities
    Edify.Input
    Edify.JSON
    Edify.Markdown.AST
    Edify.Markdown.Attributes
    Edify.Markdown.Common
    Edify.Markdown.Fence
    Edify.Markdown.Heading
    Edify.Markdown.Image
    Edify.Markdown.Include
    Edify.Markdown.Link
    Edify.Text.Indent
    Edify.Text.Narrow

------------------------------------------------------------------------------
executable edify
  import:         options, extensions, dependencies
  hs-source-dirs: app
  main-is:        Main.hs
  other-modules:  Edify.Command.Build
  build-depends:  edify

------------------------------------------------------------------------------
test-suite test
  import:         options, extensions, dependencies
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:
    CompilerTest
    Edify.Compiler.CycleTest
    Edify.Markdown.ASTTest
    Edify.Markdown.AttributesTest
    Edify.Markdown.CommonTest
    Edify.Markdown.FenceTest
    Edify.Markdown.HeadingTest
    Edify.Markdown.ImageTest
    Edify.Markdown.IncludeTest
    Edify.Markdown.LinkTest
    MarkdownTest
    NarrowTest

  build-depends:
    , edify
    , tasty         >=1.2
    , tasty-golden  ^>=2.3
    , tasty-hunit   ^>=0.10
