cabal-version:      2.4
name:               edify
version:            0.5.2
license:            Apache-2.0
license-file:       LICENSE
author:             Peter Jones <pjones@devalot.com>
maintainer:         Peter Jones <pjones@devalot.com>
copyright:          Copyright (c) 2013-2021 Peter Jones
category:           Text
build-type:         Simple
tested-with:        GHC ==8.6.5 || ==8.8.4 || ==8.10.2
homepage:           https://github.com/pjones/edify
bug-reports:        https://github.com/pjones/edify/issues
synopsis:           Markdown for Technical Authors
description:
  Edify is a Markdown processor/compiler with features designed for
  authors writing technical documentation, articles, books, etc.

------------------------------------------------------------------------------
extra-source-files:
  CHANGES.md
  data/config/*.yml
  README.md
  test/data/**/*.golden
  test/data/**/*.js
  test/data/**/*.md

------------------------------------------------------------------------------
flag maintainer
  description: Enable settings for the package maintainer.
  manual:      True
  default:     False

--------------------------------------------------------------------------------
common options
  default-language: Haskell2010
  ghc-options:
    -Wall -Wno-name-shadowing -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns -Werror=missing-home-modules
    -Widentities -Wmissing-export-lists -Wredundant-constraints

  if flag(maintainer)
    ghc-options: -Werror

--------------------------------------------------------------------------------
common extensions
  default-extensions:
    DataKinds
    DeriveAnyClass
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    OverloadedLabels
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeFamilies
    TypeOperators
    UndecidableInstances
    ViewPatterns

--------------------------------------------------------------------------------
common dependencies
  build-depends:
    , aeson                        ^>=1.5
    , aeson-pretty                 ^>=0.8
    , attoparsec                   ^>=0.13
    , base                         >=4.12   && <5.0
    , base16-bytestring            ^>=0.1
    , binary                       ^>=0.8
    , binary-instances             ^>=1.0
    , case-insensitive             ^>=1.2
    , containers                   ^>=0.6
    , cryptohash-sha256            ^>=0.11
    , directory                    ^>=1.3
    , fgl                          ^>=5.7
    , file-embed                   ^>=0.0.10
    , filepath                     ^>=1.4
    , free                         ^>=5.1
    , fsnotify                     ^>=0.3
    , generic-lens                 ^>=2.0
    , generics-sop                 ^>=0.5
    , lens                         >=4.18   && <5.0
    , mtl                          ^>=2.2
    , optparse-applicative         ^>=0.16
    , prettyprinter                ^>=1.6
    , prettyprinter-ansi-terminal  ^>=1.1
    , recursion-schemes            ^>=5.1
    , relude                       >=0.6    && <0.8
    , shake                        ^>=0.19
    , text                         ^>=1.2
    , unix-compat                  ^>=0.5
    , unordered-containers         ^>=0.2
    , with-utf8                    ^>=1.0
    , yaml                         ^>=0.11

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude)

------------------------------------------------------------------------------
library
  import:          options, extensions, dependencies
  hs-source-dirs:  src
  exposed-modules:
    Edify.Compiler.Allow
    Edify.Compiler.Asset
    Edify.Compiler.Audit
    Edify.Compiler.Cycle
    Edify.Compiler.Error
    Edify.Compiler.Eval
    Edify.Compiler.Lang
    Edify.Compiler.Markdown
    Edify.Compiler.Shake
    Edify.Compiler.Stack
    Edify.Compiler.User
    Edify.Markdown.AST
    Edify.Markdown.Attributes
    Edify.Markdown.Comment
    Edify.Markdown.Common
    Edify.Markdown.Entities
    Edify.Markdown.Fence
    Edify.Markdown.Heading
    Edify.Markdown.Image
    Edify.Markdown.Include
    Edify.Markdown.Link
    Edify.Markdown.Narrow
    Edify.Project
    Edify.Project.Config
    Edify.Project.Error
    Edify.Project.Inputs
    Edify.Project.Target
    Edify.System.Exit
    Edify.System.FilePath
    Edify.System.Input
    Edify.Text.Fingerprint
    Edify.Text.Format
    Edify.Text.Indent
    Edify.Text.JSON
    Edify.Text.Narrow
    Edify.Text.Placeholders
    Edify.Text.Pretty

------------------------------------------------------------------------------
executable edify
  import:          options, extensions, dependencies
  hs-source-dirs:  app
  main-is:         Main.hs
  other-modules:
    Edify.Command.Allow
    Edify.Command.Audit
    Edify.Command.Build
    Edify.Command.Generate

  other-modules:   Paths_edify
  autogen-modules: Paths_edify
  ghc-options:     -threaded -rtsopts
  build-depends:   edify

------------------------------------------------------------------------------
test-suite test
  import:         options, extensions, dependencies
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Main.hs
  other-modules:
    CompilerTest
    Edify.Compiler.CycleTest
    Edify.Markdown.ASTTest
    Edify.Markdown.AttributesTest
    Edify.Markdown.CommonTest
    Edify.Markdown.FenceTest
    Edify.Markdown.HeadingTest
    Edify.Markdown.ImageTest
    Edify.Markdown.IncludeTest
    Edify.Markdown.LinkTest
    Edify.ProjectTest
    MarkdownTest
    NarrowTest

  build-depends:
    , edify
    , tasty         >=1.2
    , tasty-golden  ^>=2.3
    , tasty-hunit   ^>=0.10
