cabal-version: 2.2
name:          entities
version:       0.1.0.0
synopsis:      Tool to generate an HTML entity lookup table
license:       Apache-2.0
license-file:  LICENSE
author:        Peter Jones <pjones@devalot.com>
maintainer:    Peter Jones <pjones@devalot.com>
copyright:     Copyright (c) 2020 Peter Jones
build-type:    Simple

common dependencies
  build-depends:
    , aeson                 ^>=1.4
    , base                  >=4.12 && <5.0
    , binary                ^>=0.8
    , binary-instances      ^>=1.0
    , bytestring            >=0.10 && <0.12
    , relude                >=0.6  && <0.8
    , text                  ^>=1.2
    , unordered-containers  ^>=0.2

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude)

common extensions
  default-extensions: OverloadedStrings

executable entities
  import:           dependencies, extensions
  main-is:          Main.hs
  default-language: Haskell2010
